apps/shorts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shorts
  name: shorts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shorts
  strategy: {}
  template:
    metadata:
      labels:
        app: shorts
    spec:
      containers:
        - image: ealen/echo-server
          name: echo-server
          resources: {}
          ports:
            - name: http
              containerPort: 8080
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shorts
  name: svc-shorts
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: shorts
status:
  loadBalancer: {}
