apps/studio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: studio
  name: studio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: studio
  strategy: {}
  template:
    metadata:
      labels:
        app: studio
    spec:
      containers:
        - image: ealen/echo-server
          name: echo-server
          resources: {}
          ports:
            - name: http
              containerPort: 80
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: studio
  name: svc-studio
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: studio
status:
  loadBalancer: {}
