apps/music.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: music
  name: music
spec:
  replicas: 2
  selector:
    matchLabels:
      app: music
  strategy: {}
  template:
    metadata:
      labels:
        app: music
    spec:
      containers:
        - image: ealen/echo-server
          name: echo-server
          resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: music
  name: svc-music
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: music
status:
  loadBalancer: {}

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-music
spec:
  parentRefs:
    - name: youtube-gw
      namespace: nginx
      sectionName: https
  hostnames:
    - youtube.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /music
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: music.youtube.com
            path:
              type: ReplaceFullPath
              replaceFullPath: /
      backendRefs:
        - name: svc-music
          weight: 1
          port: 80
