apps/watch-route.yaml
---
# youtube.com/v/j321wi -> https://youtube.com/watch
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-legacy-watch
spec:
  parentRefs:
    - name: youtube-gw
      namespace: nginx
      sectionName: https
  hostnames:
    - youtube.com
  rules:
    - matches:
        - path: # match legacy version
            type: PathPrefix
            value: /v
      filters:
        - type: RequestRedirect
          requestRedirect:
            path: # replaces full path -> drops ID
              type: ReplaceFullPath
              replaceFullPath: /watch
            statusCode: 302

---
# if desktop && `cohort=stable` ->
# - watch-v2
# - (mirror) canary
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: split-watch
spec:
  parentRefs:
    - name: youtube-gw
      namespace: nginx
      sectionName: https
  hostnames:
    - youtube.com
  rules:
    - matches:
        - path: # match legacy version
            type: PathPrefix
            value: /watch
          headers:
            - name: env
              value: stable
              type: Exact
          queryParams:
            - name: app
              value: desktop
      filters:
        # mirrors request to canary
        - type: RequestMirror
          requestMirror:
            backendRef:
              name: svc-watch-canary
              port: 80
      backendRefs:
        - name: svc-watch-v1
          port: 80
          weight: 80 # set to 0 to finish deployment
        - name: svc-watch-v2
          port: 80
          weight: 20
    - matches:
        - path:
            type: PathPrefix
            value: /watch
      backendRefs:
        - name: svc-watch-v1
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: studio-headers
spec:
  parentRefs:
    - name: youtube-gw
      namespace: nginx
      sectionName: https
  hostnames:
    - youtube.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /studio
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: x-surface
                value: creator-studio
      backendRefs:
        - name: svc-studio
          port: 8080

---
# -X POST /upload -> svc-upload
# -X GET should FAAAAAAAAAAAAAAAAIL
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: upload-writes
spec:
  parentRefs:
    - name: youtube-gw
      namespace: nginx
      sectionName: https
  hostnames:
    - youtube.com
  rules:
    - matches:
        - method: POST
          path:
            type: PathPrefix
            value: /upload
      backendRefs:
        - name: svc-upload
          port: 8080

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shorts-reads
spec:
  parentRefs:
    - name: youtube-gw
      namespace: nginx
      sectionName: https
  hostnames:
    - youtube.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /shorts
      backendRefs:
        - name: svc-shorts
          port: 8080
      timeouts:
        request: 500ms
      filters:
        - cors:
            allowOrigins:
              - https://studio.youtube.com
              - https://*.youtube.com
            allowCredentials: false
          type: CORS
